src/test/resources/type/bad/while-1.fika
while(2) {
    int i = 0;
    i++;
}